# docs-ci

./: .env.example  .gitignore  .gitmodules  .ocamlformat  Dockerfile  day11.opam  docker-compose.yml  dune-project  ocaml-docs-ci-client.opam  ocaml-docs-ci.opam  ocaml-docs-ci.opam.template
day11/: ARCHITECTURE.md  TESTING.md
day11/batch/: README.md  blessing.ml  blessing.mli  dune  incremental_solver.ml  incremental_solver.mli  live_view.ml  live_view.mli  profile.ml  profile.mli  profile_ctx.ml  profile_ctx.mli  recorder.ml  recorder.mli  rerun.ml  rerun.mli  snapshot.ml  snapshot.mli  summary.ml  summary.mli  targets.ml  targets.mli
day11/batch/test/: dune  test_batch.ml  test_batch_integration.ml  test_cmdliner_all.ml  test_examined_diff.ml  test_incremental.ml
day11/benchmark/: benchmark.ml  benchmark_builds.ml  benchmark_day10.ml  benchmark_docs.ml  dune  trial_run.ml
day11/container/: README.md  dune  mount.ml  mount.mli  oci_spec.ml  oci_spec.mli  overlay.ml  overlay.mli  runc.ml  runc.mli
day11/container/test/: dune  test_build_package.ml  test_container.ml  test_integration.ml
day11/doc/: PLAN-per-universe-docs.md  README.md  combine.ml  combine.mli  command.ml  command.mli  doc_build.ml  doc_build.mli  doc_deps.ml  doc_deps.mli  doc_meta.ml  doc_meta.mli  dune  generate.ml  generate.mli  odoc_store.ml  odoc_store.mli  phase.ml  phase.mli  prep.ml  prep.mli  sync.ml  sync.mli  tool_binaries.ml  tool_binaries.mli  tool_layer.ml  tool_layer.mli  universe.ml  universe.mli
day11/doc-pages/: batch.mld  container.mld  doc.mld  doc_dep_graphs.mld  dune  index.mld  jtw.mld  layer.mld  lib.mld  ocurrent_sketch.ml  opam.mld  opam_build.mld  opam_layer.mld  runner.mld  solution.mld  solver.mld  solver_pool.mld  sys.mld  test_util.mld
day11/doc/test/: dune  test_doc.ml  test_doc_compile_link.ml  test_doc_integration.ml  test_doc_pipeline.ml  test_generate_docs.ml  test_generate_plan.ml  test_stdlib_xrefs.sh  test_xref_resolution.sh
day11/jtw/: README.md  build_tools.ml  build_tools.mli  dune  gen.ml  gen.mli  generate.ml  generate.mli  tool_layer.ml  tool_layer.mli
day11/jtw/test/: dune  test_jtw.ml  test_jtw_integration.ml
day11/layer/: README.md  base.ml  base.mli  day11_layer.ml  dir.ml  dir.mli  dune  hash.ml  hash.mli  import.ml  import.mli  last_used.ml  last_used.mli  layer.ml  layer.mli  layer_status.ml  layer_status.mli  meta.ml  meta.mli  relocations.ml  relocations.mli  scan.ml  scan.mli  snapshot.ml  snapshot.mli  stack.ml  stack.mli  symlinks.ml  symlinks.mli
day11/lib/: README.md  build_config.ml  build_config.mli  build_lock.ml  build_lock.mli  cascade.ml  cascade.mli  dune  (+24 more)
day11/opam_build/test/: dune  test_build.ml  test_build_integration.ml  test_from_scratch.ml  test_layered_build.ml  test_tools.ml  test_tools_pinned.ml
day11/solver/: README.md  context.ml  context.mli  dot_solution.ml  dot_solution.mli  dune  solve.ml  solve.mli  solver_worker.ml
day11/solver/test/: dune  test_doc_deps.ml  test_solver.ml
day11/solver_pool/test/: dune  test_driver_solve.ml  test_ox_variants.ml  test_solver_pool.ml  test_who_wants_odoc_310.ml  test_why_not_odoc_320.ml
day11/sys/test/: dune  test_sys.ml
day11/test-repo/: base-packages.list  build-timeline.sh  dune  populate-base.sh  run-sweep.sh  serve.sh  timeline.txt
day11/test-repo/sources/basics-1.0.0/: basics.opam
day11/test-repo/sources/basics-1.0.0/src/: basics.ml
day11/test-repo/sources/basics-2.0.0/: basics.opam
day11/test-repo/sources/basics-2.0.0/src/: basics.ml  dune
day11/test-repo/sources/broken-1.0.0/: broken.opam
day11/test-repo/sources/broken-1.0.0/src/: broken.ml  dune
day11/test-repo/sources/broken_transitive-1.0.0/: broken_transitive.opam
day11/test-repo/sources/broken_transitive-1.0.0/src/: broken_transitive.ml  dune
day11/test-repo/sources/deprecated-1.0.0/: deprecated.opam
day11/test-repo/sources/deprecated-1.0.0/src/: deprecated.ml  dune
day11/test-repo/sources/functor-1.0.0/: functor.opam
day11/test-repo/sources/functor-1.0.0/src/: dune  functor.ml
day11/test-repo/sources/inline_include-1.0.0/: inline_include.opam
day11/test-repo/sources/inline_include-1.0.0/src/: dune  inline_include.ml
day11/test-repo/sources/markup-1.0.0/: markup.opam
day11/test-repo/sources/markup-1.0.0/src/: dune  markup.ml
day11/test-repo/sources/recursive-1.0.0/: recursive.opam
day11/test-repo/sources/recursive-1.0.0/src/: dune  recursive.ml
day11/test-repo/sources/stdlib_ref-1.0.0/: stdlib_ref.opam
day11/test-repo/sources/stdlib_ref-1.0.0/src/: dune  stdlib_ref.ml
day11/test-repo/sources/xref_forward-1.0.0/src/: dune  xref_forward.ml
day11/test-repo/sources/xref_forward-1.0.1/: xref_forward.opam
day11/test-repo/sources/xref_forward-1.0.1/src/: xref_forward.ml
day11/test-repo/sources/xref_inter-1.0.0/: xref_inter.opam
day11/test-repo/sources/xref_inter-1.0.0/src/: dune  xref_inter.ml
day11/test-repo/sources/xref_intra-1.0.0/: xref_intra.opam
day11/test-repo/sources/xref_intra-1.0.0/src/: dune  xref_intra.ml
doc/: gui_test_plan.md
docker/: README.md
migrations/: 20230726075248_initial.up.sql
src/: dune  ocaml_docs_ci.ml
src/api/pipeline/: client.ml
src/api/solver/: dune  worker.ml
src/cli/: main.ml
src/lib/: compile.ml  compile.mli  config.ml  config.mli  day11_base.ml  day11_base_digest.ml  day11_bridge.ml  day11_cache.ml  day11_compile.ml  day11_pipeline.ml  day11_prep.ml  day11_profile_ctx_loader.ml  day11_solver.ml  dune  epoch.ml  epoch.mli  epoch_promote.ml  github_pin_overlay.ml  github_pin_overlay.mli  index.ml  indexes.ml  jsoo.ml  live.ml  live.mli  misc.ml  mld.ml  mld.mli  monitor.ml  monitor.mli  opam_metadata.ml  package.ml  package.mli  pages.ml  prep.ml  prep.mli  record.ml  remote_cache.ml  remote_opam_repo.ml  remote_opam_repo.mli  solver.ml  (+9 more)
src/pipelines/: api_impl.ml  docs.ml  dune
src/solver/: epoch_lock.ml  git_context.ml  git_context.mli  main.ml  opam_repository.ml  opam_repository.mli  service.ml  solver.ml  solver.mli
src/web/: dune  index_page.ml  pages.ml  static_docs.ml  templates.ml  web_routes.ml
(+114 files in other folders)
