(executable
 (public_name ocaml-docs-ci)
 (package ocaml-docs-ci)
 (name ocaml_docs_ci)
 (libraries
  current
  current.cache
  current_git
  current_github
  current_web
  current_docker
  cmdliner
  fmt.tty
  logs.fmt
  logs.cli
  lwt
  lwt.unix
  memtrace
  opam-file-format
  docs_ci_pipelines
  docs_ci_lib
  dune-build-info
  mirage-crypto-rng.unix
  prometheus-app.unix
  eio_main
  lwt_eio
  unix)
 (preprocess
  (pps ppx_deriving_yojson)))
