(library
 (name docs_ci_lib)
 (package ocaml-docs-ci)
 (libraries
  current
  current.cache
  current_github
  current_git
  current_web
  current_docker
  cmdliner
  fmt.tty
  logs.fmt
  git-unix
  lwt
  lwt.unix
  opam-file-format
  ocaml-version
  day11.solution
  day11.solver-pool
  day11.opam-helpers
  day11.opam-build
  day11.opam-layer
  day11.layer
  day11.container
  day11.runner
  day11.exec
  day11.doc
  lwt_eio
  eio_main)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.std)))
